tests/fixtures/invalid/datetime-malformed-no-t.stderr
TOML parse error at line 1, column 18
  |
1 | no-t = 1987-07-0517:45:00Z
  |                  ^
Unexpected `1`
Expected `#`
